--- a/Web Kelompok 2 TIF INTER 2023/index.html
+++ b/Web Kelompok 2 TIF INTER 2023/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <nav> fadil jancok</nav>
-    <h1>Kelompok 2</h1>
+    <h1>Tico Jancioookk</h1>
+    <h2>Kelompok 2</h2>
 </body>
 </html>
